## Process this file with automake to produce Makefile.in
bin_PROGRAMS = dump
dump_SOURCES = \
	src/dump.c \
	src/mz.c \
	src/mz.h \
	src/ne_header.c \
	src/ne_resource.c \
	src/ne_segment.c \
	src/ne.h \
	src/pe_header.c \
	src/pe_section.c \
	src/pe.h \
	src/semblance.h \
	src/x86_instr.c \
	src/x86_instr.h
